# pymmcore-midi

./: .pre-commit-config.yaml  README.md  example.py  mini.yml  pyproject.toml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml
src/pymmcore_midi/: __init__.py  _core_connect.py  _device.py  _map_spec.py  _xtouch.py
tests/: conftest.py  test_core_connect.py  test_pymmcore_midi.py  test_spec.py
